dark mode fix

--- a/src/components/NavigationBar/NavigationBar.module.scss
+++ b/src/components/NavigationBar/NavigationBar.module.scss
@@ -3,7 +3,7 @@
 @import '../../styles/variables';
 
 .nav {
-  background-color: $color-white;
+  background-color: $color-slate-dark-5;
   box-shadow: 0 1rem 1rem rgba($color-slate-dark-5, 0.08);
   position: fixed;
   width: 100%;
@@ -153,7 +153,7 @@
       width: 50%;
       display: flex;
       flex-direction: column;
-      background-color: $color-white;
+      background-color: $color-slate-dark-4;
       overflow: hidden;
       transform-origin: right;
       transition: all 0.3s;
@@ -214,7 +214,7 @@
       &::before {
         transform: translate(-50%, -50%) scale(1);
       }
-
+      text-shadow: 0 0 3px $color-primary-dark;
       @include theme(dark) {
         text-shadow: 0 0 3px $color-primary-dark;
       }
