--- a/src/sections/Contact/SocialLinks/social.module.scss
+++ b/src/sections/Contact/SocialLinks/social.module.scss
@@ -9,7 +9,7 @@
     font-size: 2.2rem;
     display: block;
     text-decoration: none;
-    color: $color-slate-dark-1;
+    color: $color-white;
 
     transition: all 0.2s;
 
@@ -22,7 +22,7 @@
     }
 
     &:hover {
-      color: $color-primary-dark;
+      color: $color-primary-light;
       filter: drop-shadow(0 0 1rem $color-primary-dark);
 
       @include theme(dark) {
