--- a/src/sections/Footer/footer.module.scss
+++ b/src/sections/Footer/footer.module.scss
@@ -5,7 +5,7 @@
   text-align: center;
   background-color: $color-slate-light-2;
   padding: 2rem;
-
+  background-color: inherit;
   @include theme(dark) {
     background-color: inherit;
   }
@@ -17,7 +17,7 @@
   .colorize {
     font-family: $font-mono;
     font-size: 1.6rem;
-    color: $color-primary-dark;
+    color: $color-primary-light;
 
     @include theme(dark) {
       color: $color-primary-light;
