--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -25,7 +25,7 @@
   }
 
   @if ($number==even) {
-    background-color: $color-slate-light-1;
+    background-color: $color-slate-dark-4;
 
     .container {
       width: 110rem;
